--- a/index.html
+++ b/index.html
@@ -69,13 +69,11 @@
     });
   });
 </script>
-
 <div class="layout grid-middle big-grid-middle large-grid-large bg isplit-full scrollto">
   <h3 class="margin-bottom-mini weight" align="center">About</h3>
      <p align="center"> Appliques & Decorative Patches</p>
 <p align="text-gray size-mini">Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordinary.</p>
     <div class="grid big-grid-middle large-grid-large isplit-content">
-
     <div class="big-x12 grid discovers">
       <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
         <div class="overflow-hidden margin-bottom relative effect-hover">
@@ -127,7 +125,7 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/KJPQMQdm.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576394952389.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
@@ -135,25 +133,33 @@
       </a>
       <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/tDqu761P.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576419722657.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
 		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
         <p class="flex-grow">Embroidered water-soluble lace···<br /><span class="text-main">Read More</span></p>
       </a>
+      <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576587845466.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="flex-grow">Embroidered clothing accessori···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576827388624.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="flex-grow">Embroidered lace colored fabri···<br /><span class="text-main">Read More</span></p>
+      </a>
     </div>
   </div>
-  
-  
-
-  
 </div>
-
-
-
-
-
-<div class="layout grid-large isplit scrollto"> 
+<div class="layout grid-large isplit scrollto">
+<h3 align="center">New </h3>
   <div class="grid documents">
     <a class="big-x4" href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
       <strong>Chinese embroidery with a long history has been an important···</strong>
@@ -166,7 +172,7 @@
   </div>
 </div>
 <div class="layout grid-large isplit scrollto">
-    <h3></h3>
+    <h3 align="center">Help</h3>
   <p align="center"> </p>
   <div class="grid documents">
     <a class="big-x4" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
@@ -174,10 +180,8 @@
     </a>
   </div>
 </div>
-
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
   <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
 </div>
-<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
