--- a/q/10.html
+++ b/q/10.html
@@ -61,7 +61,7 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="https://p.upyun.com/demo/tmp/eE4AC71d.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/other/20240628/1719576587845466.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</strong>
@@ -80,92 +80,92 @@
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/A4OymTHa.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576606814069.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/A4OymTHa.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576606814069.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">Embroidered clothing accessories</p>
+        <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/nVnTYbXa.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576609289037.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/nVnTYbXa.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576609289037.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">embroidered lace fabric</p>
+        <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/k321EC5n.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576631710830.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/k321EC5n.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576631710830.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-1</p>
+        <p class="flex-grow">S/N: A10-1</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/FaRewxmG.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576633543829.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/FaRewxmG.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576633543829.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-2</p>
+        <p class="flex-grow">S/N: A10-2</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/VXjcO4JG.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576635103873.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/VXjcO4JG.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576635103873.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-3</p>
+        <p class="flex-grow">S/N: A10-3</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/zwMjriV4.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576645350825.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/zwMjriV4.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576645350825.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-4</p>
+        <p class="flex-grow">S/N: A10-4</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/qDMofKfO.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576648212779.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/qDMofKfO.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576648212779.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-5</p>
+        <p class="flex-grow">S/N: A10-5</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/ipqsytwj.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576652572016.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/ipqsytwj.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576652572016.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-6</p>
+        <p class="flex-grow">S/N: A10-6</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/Q5hYhT5i.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576656575737.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/Q5hYhT5i.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576656575737.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-7</p>
+        <p class="flex-grow">S/N: A10-7</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/ARMaE73x.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576659935990.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/ARMaE73x.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576659935990.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A10-8</p>
+        <p class="flex-grow">S/N: A10-8</p>
       </a>
     </div>
   </div>
-<p>上一个：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>下一个：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://p.upyun.com/demo/tmp/tDqu761P.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240628/1719576419722657.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://p.upyun.com/demo/tmp/eE4AC71d.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240628/1719576587845466.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">Read More</a></div>
           </div>
         </div>
