--- a/q/16.html
+++ b/q/16.html
@@ -61,7 +61,7 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="https://p.upyun.com/demo/tmp/KJPQMQdm.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/other/20240628/1719576394952389.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set</strong>
@@ -80,23 +80,23 @@
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/JTOut09H.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576399734438.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/JTOut09H.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576399734438.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
     </div>
   </div>
-<p>上一个：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>下一个：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://p.upyun.com/demo/tmp/KJPQMQdm.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240628/1719576394952389.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31">Read More</a></div>
           </div>
         </div>
