--- a/q/22.html
+++ b/q/22.html
@@ -145,8 +145,8 @@
       </a>
     </div>
   </div>
-<p>上一个：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>下一个：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
