--- a/q/9.html
+++ b/q/9.html
@@ -61,7 +61,7 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="https://p.upyun.com/demo/tmp/GhctPHiT.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/other/20240628/1719576827388624.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product</strong>
@@ -80,80 +80,80 @@
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/MzxO88d6.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576843113029.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/MzxO88d6.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576843113029.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories</p>
+        <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/M7NeClqJ.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576846447497.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/M7NeClqJ.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576846447497.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">water-soluble flower new product</p>
+        <p class="flex-grow"></p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/ARY1CYhJ.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856958959.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/ARY1CYhJ.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856958959.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-1</p>
+        <p class="flex-grow">S/N: A9-1</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/uJZrv2dI.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856555027.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/uJZrv2dI.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856555027.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-18</p>
+        <p class="flex-grow">S/N: A9-2</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/7MznBqED.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856161288.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/7MznBqED.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856161288.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-2</p>
+        <p class="flex-grow">S/N: A9-3</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/HZuyEtzI.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856715162.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/HZuyEtzI.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856715162.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-3</p>
+        <p class="flex-grow">S/N: A9-4</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/6XinzcEb.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856645983.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/6XinzcEb.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856645983.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-4</p>
+        <p class="flex-grow">S/N: A9-5</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/8eAPonSu.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856470802.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/8eAPonSu.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856470802.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-5</p>
+        <p class="flex-grow">S/N: A9-6</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/CAGjMYOe.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856622626.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/CAGjMYOe.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856622626.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-6</p>
+        <p class="flex-grow">S/N: A9-7</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/rPavUXuI.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576856982591.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/rPavUXuI.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576856982591.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A9-7</p>
+        <p class="flex-grow">S/N: A9-8</p>
       </a>
     </div>
   </div>
-<p>上一个：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>下一个：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
