--- a/q/15.html
+++ b/q/15.html
@@ -61,7 +61,7 @@
       <a class="padding block text-white discovers-main" href=" ">
         <div class="overflow-hidden margin-bottom relative effect-hover">
           <figure class="figure figure-above radius-big">
-              <img loading="lazy" src="https://p.upyun.com/demo/tmp/tDqu761P.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" class="img-auto scale" /></figure>
+              <img loading="lazy" src="/q/upload/other/20240628/1719576419722657.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <strong class="weight-small">Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery</strong>
@@ -80,85 +80,85 @@
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/EhXbHtrV.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576438728427.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/EhXbHtrV.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576438728427.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">subshrubby peony flower</p>
+        <p class="flex-grow">Embroidered</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/IfJDqgyN.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576442207382.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/IfJDqgyN.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576442207382.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-1</p>
+        <p class="flex-grow">S/N: A15-1</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/jndmn1ww.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576444923678.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/jndmn1ww.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576444923678.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-2</p>
+        <p class="flex-grow">S/N: A15-2</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/IjmcQqqw.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576449511699.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/IjmcQqqw.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576449511699.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-3</p>
+        <p class="flex-grow">S/N: A15-3</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/YKiWKVyj.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576451445348.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/YKiWKVyj.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576451445348.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-4</p>
+        <p class="flex-grow">S/N: A15-4</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/bTpNkAjM.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576453759611.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/bTpNkAjM.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576453759611.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-5</p>
+        <p class="flex-grow">S/N: A15-5</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/DHMiJjQx.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576456229242.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/DHMiJjQx.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576456229242.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-6</p>
+        <p class="flex-grow">S/N: A15-6</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/80X5NaKr.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576458303551.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/80X5NaKr.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576458303551.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-7</p>
+        <p class="flex-grow">S/N: A15-7</p>
       </a>
-      <a class="big-x4 flex flex-column" href="https://p.upyun.com/demo/tmp/ngbVLHoi.webp">
+      <a class="big-x4 flex flex-column" href="/q/upload/other/20240628/1719576461501692.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/ngbVLHoi.webp" alt="Sewing Products" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576461501692.webp" alt="Sewing Products" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
-        <p class="flex-grow">A15-8</p>
+        <p class="flex-grow">S/N: A15-8</p>
       </a>
     </div>
   </div>
-<p>上一个：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p>下一个：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 </div>
     <div class="grid-middle">
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://p.upyun.com/demo/tmp/tDqu761P.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240628/1719576419722657.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="https://p.upyun.com/demo/tmp/eE4AC71d.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="/q/upload/other/20240628/1719576587845466.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">Read More</a></div>
           </div>
         </div>
