--- a/404.html
+++ b/404.html
@@ -3,10 +3,9 @@
 <title>404</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/q/c.css">
 <header>
   <a href="/">
-    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
+    <div>
     </div>
     <h1>
       zalalaa<span>.</span>com
@@ -20,7 +19,7 @@
   <div>
     <nav aria-labelledby="nav-header">
       <div>
-        <h2 id="nav-header">Site navigation</h2>
+        <h2 id="nav-header"></h2>
         <a class="active" href="/">Home</a>
         <a href="/q/abouts/">About Us</a>
         <a href="/q/patches/">Applique Patches</a>
@@ -34,8 +33,6 @@
 <footer>
   Made in <a href="https://zalalaa.com/">Zalalaa.com</a>.
 </footer>
-<div class="background-logo">
-<img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="50" />
 </div>
 </body>
 </html>
