--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#D1F1FF">
 <header>
-  <a href="/">
+  <a href="https://zalalaa.com">
     <div>
     </div>
     <h1>
@@ -12,6 +12,12 @@
     </h1>
   </a>
 </header>
+<style type="text/css">
+p {color:blue;}
+a {
+  text-decoration: none;
+}
+</style>
 <main class="index">
 <p>404</p>
 </main>
@@ -20,7 +26,7 @@
     <nav aria-labelledby="nav-header">
       <div>
         <h2 id="nav-header"></h2>
-        <a class="active" href="/">Home</a>
+        <a class="active" href="https://zalalaa.com">Home</a>
         <a href="/q/abouts/">About Us</a>
         <a href="/q/patches/">Applique Patches</a>
         <a href="/q/article/">Blog</a>
@@ -31,7 +37,7 @@
   </div>
 </aside>
 <footer>
-  Made in <a href="https://zalalaa.com/">Zalalaa.com</a>.
+  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
 </footer>
 </div>
 </body>
